Causeview Package Complete/ant script/retrieveUnpackaged/objects/Letter__c.object
<CustomObject>
    <description>Causeview - Customization of Thank you/Receipt Letters (Acknowledgments).</description>
    <fields>
        <fullName>Body_Text_Block_Plain_Text__c</fullName>
        <description>Plain text body text block</description>
        <inlineHelpText>Plain text body text block</inlineHelpText>
        <label>Body Text Block (Plain Text)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Rich_Text_1__c</fullName>
        <description>Custom letter field that is copied to receipt if letter is selected.  Can be used for custom merge elements in Acknowledgement letter.</description>
        <inlineHelpText>Custom letter field that is copied to receipt if letter is selected.  Can be used for custom merge elements in Acknowledgement letter.</inlineHelpText>
        <label>Custom Rich Text 1</label>
        <length>4096</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Custom_Rich_Text_2__c</fullName>
        <description>Custom letter field that is copied to receipt if letter is selected.  Can be used for custom merge elements in Acknowledgement letter.</description>
        <inlineHelpText>Custom letter field that is copied to receipt if letter is selected.  Can be used for custom merge elements in Acknowledgement letter.</inlineHelpText>
        <label>Custom Rich Text 2</label>
        <length>4096</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Custom_Rich_Text_3__c</fullName>
        <description>Custom letter field that is copied to receipt if letter is selected.  Can be used for custom merge elements in Acknowledgement letter.</description>
        <inlineHelpText>Custom letter field that is copied to receipt if letter is selected.  Can be used for custom merge elements in Acknowledgement letter.</inlineHelpText>
        <label>Custom Rich Text 3</label>
        <length>4096</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of Letter.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <description>Defines the subject line for the email template used for this letter.</description>
        <inlineHelpText>Defines the subject line for the email template used for this letter.</inlineHelpText>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Name__c</fullName>
        <description>Name of fund to be printed on letter.</description>
        <inlineHelpText>Name of fund to be printed on letter.</inlineHelpText>
        <label>Fund Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Introduction_Text_Block_Rich_Text__c</fullName>
        <description>Rich text introduction text block</description>
        <inlineHelpText>Rich text introduction text block</inlineHelpText>
        <label>Introduction Text Block (Rich Text)</label>
        <length>4096</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Introduction__c</fullName>
        <description>Introduction text for letter</description>
        <inlineHelpText>Introduction text for letter</inlineHelpText>
        <label>Introduction Text Block (Plain Text)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <description>URL to logo for use on acknowledgement letter</description>
        <inlineHelpText>URL to logo for use on acknowledgement letter</inlineHelpText>
        <label>Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name of Letter</description>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Image__c</fullName>
        <description>URL to image of letter signature</description>
        <inlineHelpText>URL to image of letter signature</inlineHelpText>
        <label>Signature Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Signature_Rich_Text__c</fullName>
        <description>Rich text signature block</description>
        <inlineHelpText>Rich text signature block</inlineHelpText>
        <label>Signature (Rich Text)</label>
        <length>4096</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <description>Signature text</description>
        <inlineHelpText>Signature text</inlineHelpText>
        <label>Signature (Plain Text)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text_Block__c</fullName>
        <description>Custom text block to be added to letter template.</description>
        <inlineHelpText>Body text block</inlineHelpText>
        <label>Body Text Block (Rich Text)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Letter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Description__c</columns>
        <columns>Fund_Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L{0000}</displayFormat>
        <label>Letter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Letters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>